--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body,
   margin: 0;
   padding: 0;
   background-color: #fdfbf7;
-  font-family: 'IBM Plex Mono', 'Galmuri9', 'Courier New', monospace;
+  font-family: 'Galmuri9', 'Courier New', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
